[workspace]
members = [
  "abc342",
  "abc341",
  "abc340",
  "abc339",
  "abc338",
  "abc337",
  "abc336",
  "abc335",
  "abc334",
  "abc333",
  "abc332",
  "arc169",
  "abc331",
  "abc330",
  "arc168",
  "abc329",
  "abc328",
  "abc327",
  "abc326",
  "abc325",
  "abc324",
  "abc323",
  "edpc",
  "abc322",
  "arc056",
  "code-formula-2014-b",
  "ahc024",
  "abc321",
  "agc004",
  "code-festival-2017",
  "gbc",
  "abc320",
  "arc057",
  "abc319",
  "jsc2019-qual-b",
  "indeednow-qualb",
  "abc318",
  "arc122",
  "abc317",
  "code-festival-2016",
  "abc315",
  "abc314",
  "abc313",
  "abc312",
  "hhkb2020",
  "abc311",
  "abc310",
  "disco2016",
  "abc309",
  "abc308",
  "arc143",
  "abc307",
  "arc107",
  "tenka1-2014",
  "tenka1-2012",
  "zone2021",
  "dwacon005",
  "abc306",
  "abc305",
  "abc304",
  "abc001",
  "abc002",
  "abc003",
  "abc004",
  "abc005",
  "abc006",
  "abc007",
  "abc008",
  "abc009",
  "abc010",
  "abc011",
  "abc012",
  "abc013",
  "abc014",
  "abc015",
  "abc016",
  "abc017",
  "abc018",
  "abc019",
  "abc020",
  "abc021",
  "abc022",
  "abc023",
  "abc024",
  "abc025",
  "abc026",
  "abc027",
  "abc028",
  "abc029",
  "abc030",
  "abc031",
  "abc032",
  "abc033",
  "abc034",
  "abc035",
  "abc036",
  "abc037",
  "abc038",
  "abc039",
  "abc040",
  "abc041",
  "abc042",
  "abc043",
  "abc044",
  "abc045",
  "abc046",
  "abc047",
  "abc048",
  "abc049",
  "abc050",
  "abc051",
  "abc052",
  "abc053",
  "abc054",
  "abc055",
  "abc056",
  "abc057",
  "abc058",
  "abc059",
  "abc060",
  "abc061",
  "abc062",
  "abc063",
  "abc064",
  "abc065",
  "abc066",
  "abc067",
  "abc068",
  "abc069",
  "abc070",
  "abc071",
  "abc072",
  "abc073",
  "abc074",
  "abc075",
  "abc076",
  "abc077",
  "abc078",
  "abc079",
  "abc080",
  "abc081",
  "abc082",
  "abc083",
  "abc084",
  "abc085",
  "abc086",
  "abc087",
  "abc088",
  "abc089",
  "abc090",
  "abc091",
  "abc092",
  "abc093",
  "abc094",
  "abc303",
  "abc095",
  "abc096",
  "abc097",
  "abc098",
  "abc099",
  "abc100",
  "abc101",
  "abc102",
  "abc103",
  "abc104",
  "abc105",
  "abc106",
  "abc107",
  "abc108",
  "abc109",
  "abc110",
  "abc111",
  "abc112",
  "abc113",
  "abc114",
  "abc115",
  "abc116",
  "abc117",
  "abc118",
  "abc119",
  "abc120",
  "abc121",
  "abc122",
  "abc123",
  "abc124",
  "abc125",
  "abc126",
  "abc127",
  "abc128",
  "abc129",
  "abc130",
  "abc131",
  "abc132",
  "abc133",
  "abc134",
  "abc135",
  "abc136",
  "abc137",
  "abc138",
  "abc139",
  "abc140",
  "abc141",
  "abc142",
  "abc143",
  "abc144",
  "abc145",
  "abc146",
  "abc147",
  "abc148",
  "abc149",
  "abc150",
  "abc151",
  "abc152",
  "abc153",
  "abc154",
  "abc155",
  "abc156",
  "abc157",
  "abc158",
  "abc159",
  "abc160",
  "abc161",
  "abc162",
  "abc163",
  "abc164",
  "abc165",
  "abc166",
  "abc167",
  "abc168",
  "abc169",
  "abc170",
  "abc171",
  "abc172",
  "abc173",
  "abc174",
  "abc175",
  "abc176",
  "abc177",
  "abc178",
  "abc179",
  "abc301",
  "abc180",
  "abc181",
  "abc182",
  "abc183",
  "abc184",
  "abc185",
  "abc186",
  "abc187",
  "abc188",
  "abc189",
  "abc190",
  "abc191",
  "abc192",
  "abc193",
  "abc194",
  "abc195",
  "abc196",
  "abc197",
  "abc198",
  "abc199",
  "abc302",
  "abc200",
  "abc201",
  "abc202",
  "abc203",
  "abc204",
  "abc205",
  "abc206",
  "abc207",
  "abc208",
  "abc209",
  "abc210",
  "abc211",
  "abc212",
  "abc213",
  "abc214",
  "abc215",
  "abc216",
  "abc217",
  "abc218",
  "abc219",
  "abc220",
  "abc221",
  "abc222",
  "abc223",
  "abc224",
  "abc225",
  "abc226",
  "abc227",
  "abc228",
  "abc229",
  "abc230",
  "abc231",
  "abc232",
  "abc233",
  "abc234",
  "abc235",
  "abc236",
  "abc237",
  "abc238",
  "abc239",
  "abc240",
  "abc241",
  "abc242",
  "abc243",
  "abc244",
  "abc245",
  "abc246",
  "abc247",
  "abc248",
  "abc249",
  "abc250",
  "abc251",
  "abc252",
  "abc253",
  "abc254",
  "abc255",
  "abc256",
  "abc257",
  "abc258",
  "abc259",
  "abc260",
  "abc261",
  "abc262",
  "abc263",
  "abc264",
  "abc265",
  "abc266",
  "abc267",
  "abc268",
  "abc269",
  "abc270",
  "abc271",
  "abc272",
  "abc273",
  "abc274",
  "abc275",
  "abc276",
  "abc277",
  "abc278",
  "abc279",
  "abc280",
  "abc281",
  "abc282",
  "abc283",
  "abc284",
  "abc285",
  "abc286",
  "abc287",
  "abc288",
  "abc289",
  "abc290",
  "abc291",
  "abc292",
  "abc293",
  "abc294",
  "abc300",
  "abc299",
  "abc298",
  "abc297",
  "abc296",
  "abc295",
]
[build]
target-dir = "target"






















































